# mario_kart

./: README.md  dependencies.rosinstall  gate.dae  ground.dae  sidewall.dae
Models/: side_gate.dae  sidewall.dae  stand_gate.dae
simulator/: CMakeLists.txt  package.xml
simulator/etc/: complete_model.py  model.config  model.sdf
simulator/launch/: default.launch
simulator/models/gate/: model.config  model.sdf
simulator/models/gate/meshes/: gate.dae
simulator/models/ground/: model.config  model.sdf
simulator/models/ground/meshes/: ground.dae
simulator/models/side_gate/: model.config  model.sdf
simulator/models/side_gate/meshes/: side_gate.dae
simulator/models/sidewall/: model.config  model.sdf
simulator/models/sidewall/meshes/: sidewall.dae
simulator/models/stand_gate/: model.config  model.sdf
simulator/models/stand_gate/meshes/: stand_gate.dae
simulator/models/top_gate/: model.config  model.sdf
simulator/models/top_gate/meshes/: top_gate.dae
simulator/urdf/: firefly_with_camera.xacro
simulator/worlds/: default.world
snake_gate_detector/: CMakeLists.txt  package.xml
snake_gate_detector/config/: param.yaml
snake_gate_detector/include/snake_gate_detector/: libsnake_gate_detector.hpp  snake_gate_detector.hpp
snake_gate_detector/launch/: default.launch
snake_gate_detector/src/: libsnake_gate_detector.cpp  snake_gate_detector.cpp  snake_gate_detector_node.cpp  snake_gate_detector_test.cpp
