<?xml version="1.0"?>
<package format="2">
    <name>simulator</name>
    <version>0.0.1</version>
    <description>Simulation environment</description>
    <maintainer email="ashwins@iitk.ac.in">Ashwin Shenai</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

</package>
