<?xml version="1.0"?>
<package format="2">
    <name>snake_gate_detector</name>
    <version>0.0.1</version>
    <description>Snake Gate Detector for detecting frames</description>
    <maintainer email="kabeer@iitk.ac.in">Kshitij Kabeer</maintainer>

    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <buildtool_depend>catkin_simple</buildtool_depend>

    <build_depend>roscpp</build_depend>

    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    <depend>image_transport</depend>
</package>
